fix starring on Mobile Safari (on iPhone or iPad)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -123,6 +123,7 @@ div.item-star.star, div.item-star.unstar {
   margin-top: -10px;
   background-position: 6px 4px;
   margin-left: -6px;
+  cursor: pointer;
 }
 
 div.item-star.unstar {
